# fuel-indexer-ng

./: Cargo.toml
prisma/: index.ts  package-lock.json  package.json
prisma/prisma/: schema.prisma
script/src/: main.sw
src/: abi.rs  blocks.rs  ecal.rs  extensions.rs  main.rs  prisma.rs  schema_builder.rs  types.rs
src/ecal/: ecal_load.rs  ecal_print.rs  ecal_read_file.rs  ecal_save.rs  ecal_type_id.rs  mod.rs
src/sql/: mod.rs  sql_table_builder.rs
sway/libraries/ecal-lib/: Forc.toml
sway/libraries/ecal-lib/src/: lib.sw
sway/libraries/indexer/: Forc.toml
sway/libraries/indexer/src/: lib.sw  receipt.sw
sway/libraries/my-contract-lib/: Forc.toml
sway/libraries/my-contract-lib/src/: lib.sw
sway/scripts/block-indexer/: Forc.toml
sway/scripts/block-indexer/src/: main.sw
sway/scripts/myotherstruct-indexer/: Forc.toml
sway/scripts/myotherstruct-indexer/src/: main.sw
sway/scripts/mystruct-indexer/: Forc.toml
sway/scripts/mystruct-indexer/src/: main.sw
sway/scripts/produce-data/: Forc.toml
sway/scripts/produce-data/src/: main.sw
