[package]
name = "fuel-vm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel-vm = { version = "0.43.0", features = [ "test-helpers"] }
fuel-asm = "0.43.0"
fuel-tx = "0.43.0"
fuels = "0.51.0"
anyhow = "1"
tokio = "1"
